--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>es.uniovi.eii.ds</groupId>
+    <groupId>es.uniovi.raul</groupId>
     <artifactId>${project.name}</artifactId>
     <version>1.0</version>
 
@@ -27,7 +27,7 @@
                 <artifactId>exec-maven-plugin</artifactId>
                 <version>3.5.1</version>
                 <configuration>
-                    <mainClass>es.uniovi.eii.ds.main.Main</mainClass>
+                    <mainClass>es.uniovi.raul.main.Main</mainClass>
                 </configuration>
             </plugin>
             <plugin>
@@ -38,7 +38,7 @@
                     <finalName>${project.name}</finalName>
                     <archive>
                         <manifest>
-                            <mainClass>es.uniovi.eii.ds.main.Main</mainClass>
+                            <mainClass>es.uniovi.raul.main.Main</mainClass>
                         </manifest>
                     </archive>
                     <appendAssemblyId>false</appendAssemblyId>
